more renovate work

--- a/.github/renovate/main.json5
+++ b/.github/renovate/main.json5
@@ -1,6 +1,21 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+    "rebaseWhen": "conflicted",
+  "prConcurrentLimit": 25,
+  "pinDigests": true,
+    "semanticCommits": "enabled",
+  "extends": ["helpers:pinGitHubActionDigests"],
+  "dependencyDashboard": true,
+  "dependencyDashboardTitle": "Renovate Dashboard 🤖",
+    "suppressNotifications": ["prEditedNotification", "prIgnoreNotification"],
      "extends": [
+    "config:recommended",
+    "docker:enableMajor",
+    "replacements:k8s-registry-move",
+    ":automergeBranch",
+    ":disableRateLimiting",
+    ":dependencyDashboard",
+    ":semanticCommits",
         "github>truecharts/public//.github/renovate/updates/digest.json5",
         "github>truecharts/public//.github/renovate/updates/update.json5",
         "github>truecharts/public//.github/renovate/updates/minor.json5",
