--- a/.github/renovate/kinds/flux.json5
+++ b/.github/renovate/kinds/flux.json5
@@ -7,7 +7,7 @@
     ],
     "enabled": true, // Enable Flux updates
     "updateTypes": ["major", "minor", "patch"], // Allow updates for all version types
-    "commitMessageSuffix": "fix: update Flux helm-release" // Customize commit message suffix
+    "commitMessageSuffix": "fix: update Flux helm-release", // Customize commit message suffix
     "semanticCommitScope": "Flux Objects",
   },
   
