--- a/charts/stable/rimgo/Chart.yaml
+++ b/charts/stable/rimgo/Chart.yaml
@@ -15,7 +15,7 @@ dependencies:
     alias: ""
     tags: []
     import-values: []
-deprecated: false
+deprecated: true
 description: Alternative Imgur front-end
 home: https://truecharts.org/charts/stable/rimgo
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/rimgo.webp
@@ -32,4 +32,4 @@ sources:
   - https://github.com/truecharts/charts/tree/master/charts/stable/rimgo
   - https://quay.io/pussthecatorg/rimgo
 type: application
-version: 8.2.20
+version: 9.0.0
