more renovate work

--- a/.github/renovate/main.json5
+++ b/.github/renovate/main.json5
@@ -1,21 +1,18 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
     "rebaseWhen": "conflicted",
-  "prConcurrentLimit": 25,
+  "prConcurrentLimit": 100,
   "pinDigests": true,
     "semanticCommits": "enabled",
   "extends": ["helpers:pinGitHubActionDigests"],
   "dependencyDashboard": true,
   "dependencyDashboardTitle": "Renovate Dashboard 🤖",
+  "separateMinorPatch": true,
+    prHourlyLimit: 0,
+    semanticCommits: 'enabled',
     "suppressNotifications": ["prEditedNotification", "prIgnoreNotification"],
      "extends": [
     "config:recommended",
-    "docker:enableMajor",
-    "replacements:k8s-registry-move",
-    ":automergeBranch",
-    ":disableRateLimiting",
-    ":dependencyDashboard",
-    ":semanticCommits",
         "github>truecharts/public//.github/renovate/updates/digest.json5",
         "github>truecharts/public//.github/renovate/updates/patch.json5",
         "github>truecharts/public//.github/renovate/updates/minor.json5",
