--- a/.github/renovate/updates/major.json5
+++ b/.github/renovate/updates/major.json5
@@ -11,7 +11,8 @@
       "matchVersion": "^\\d{4}\\.\\d{1,2}(\\.\\d{1,2})?$",
       "excludePackagePatterns": ["*"],
       "enabled": false,
-      "matchUpdateTypes": ["major"]
+      "matchUpdateTypes": ["major"],
+      dependencyDashboardApproval: true,
     }
   ]
 }
