actually connect shit

--- a/.github/renovate/folders/clusters.json5
+++ b/.github/renovate/folders/clusters.json5
@@ -5,6 +5,7 @@
         "github>truecharts/public//.github/renovate/kinds/flux.json5",
         "github>truecharts/public//.github/renovate/kinds/helm-values.json5",
         "github>truecharts/public//.github/renovate/kinds/docker.json5",
-        "github>truecharts/public//.github/renovate/special/talconfig.json5"
+        "github>truecharts/public//.github/renovate/special/talconfig.json5",
+        "github>truecharts/public//.github/renovate/special/customClusterManagers.json5"
       ]
 }
