--- a/.github/renovate/main.json5
+++ b/.github/renovate/main.json5
@@ -20,7 +20,11 @@
         "github>truecharts/public//.github/renovate/updates/calver.json5",
         "github>truecharts/public//.github/renovate/basics/commitMessage.json5",
         "github>truecharts/public//.github/renovate/basics/labels.json5",
-        "github>truecharts/public//.github/renovate/special/groups.json5"
+        "github>truecharts/public//.github/renovate/special/groups.json5",
+        "github>truecharts/public//.github/renovate/special/automerge.json5",
+        "github>truecharts/public//.github/renovate/special/customRules.json5",
+        "github>truecharts/public//.github/renovate/special/customVersioning.json5",
+        "github>truecharts/public//.github/renovate/special/schedules.json5"
       ],
   // Main Renovate configuration that lists package rules for various paths
   "packageRules": [
