--- a/.github/renovate/updates/digest.json5
+++ b/.github/renovate/updates/digest.json5
@@ -2,7 +2,8 @@
       "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "digest": {
     "enabled": true, // Enable digest updates
-    "automerge": true
+    "automerge": true,
+    "autoApprove": true
   },
   "ignore": [
     // Add any paths or patterns to ignore specific digest updates, if necessary
