--- a/.github/renovate/updates/major.json5
+++ b/.github/renovate/updates/major.json5
@@ -1,7 +1,8 @@
 {
       "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "major": {
-    "enabled": true // Enable minor updates
+    "enabled": true, // Enable minor updates
+    "autoApprove": false
   },
   "ignore": [
     // Add any paths or patterns to ignore specific minor updates, if necessary
