--- a/.github/renovate/updates/minor.json5
+++ b/.github/renovate/updates/minor.json5
@@ -1,7 +1,8 @@
 {
       "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "minor": {
-    "enabled": true // Enable minor updates
+    "enabled": true, // Enable minor updates
+    "autoApprove": true
   },
   "ignore": [
     // Add any paths or patterns to ignore specific minor updates, if necessary
