--- a/.github/renovate/updates/patch.json5
+++ b/.github/renovate/updates/patch.json5
@@ -2,7 +2,8 @@
       "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "patch": {
     "enabled": true, // Enable patch updates
-    "automerge": true
+    "automerge": true,
+    "autoApprove": true
   },
   "ignore": [
     // Add any paths or patterns to ignore specific patch updates, if necessary
