--- a/.github/renovate/main.json5
+++ b/.github/renovate/main.json5
@@ -1,13 +1,16 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
     "rebaseWhen": "conflicted",
-  "prConcurrentLimit": 100,
+  "prConcurrentLimit": 150,
+  commitMessageSuffix: "By Renovate",
   "pinDigests": true,
     "semanticCommits": "enabled",
   "extends": ["helpers:pinGitHubActionDigests"],
   "dependencyDashboard": true,
   "dependencyDashboardTitle": "Renovate Dashboard 🤖",
+  gitAuthor: "TrueCharts-Admin <bot@truecharts.org>",
   "separateMinorPatch": true,
+  timezone: "Europe/Amsterdam",
     prHourlyLimit: 0,
     semanticCommits: 'enabled',
     "suppressNotifications": ["prEditedNotification", "prIgnoreNotification"],
