ensure prs are created

--- a/.github/renovate/special/automerge.json5
+++ b/.github/renovate/special/automerge.json5
@@ -5,7 +5,7 @@
       "description": ["Auto-merge container digests, patch and minor updates for trusted containers"],
       "matchDatasources": ["docker"],
       "automerge": true,
-      "automergeType": "branch",
+      "automergeType": "pr",
       "matchUpdateTypes": ["digest", "patch", "minor"],
       "matchPackagePatterns": ["ghcr.io/bjw-s", "ghcr.io/onedr0p", "tccr.io/tccr/.*", "tccr.io/tccrbase/.*" ],
     },
@@ -13,7 +13,7 @@
   "description": ["Auto-merge chart updates, patch, and minor updates for OCI Helm charts from tccr.io/truecharts"],
   "matchDatasources": ["helm"], // Use 'helm' datasource to match Helm charts
   "automerge": true,
-  "automergeType": "branch",
+  "automergeType": "pr",
   "matchUpdateTypes": ["digest", "patch", "minor"], // Specify the types of updates to automate
   "matchPackagePatterns": ["tccr.io/truecharts/.*"] // Matches all OCI Helm charts under tccr.io/truecharts
 },
@@ -22,7 +22,7 @@
       "matchManagers": ["github-actions"],
       "matchDatasources": ["github-tags"],
       "automerge": true,
-      "automergeType": "branch",
+      "automergeType": "pr",
       "matchUpdateTypes": ["minor", "patch"]
     }
   ]
