easier custom regex matching

--- a/.github/renovate/special/customClusterManagers.json5
+++ b/.github/renovate/special/customClusterManagers.json5
@@ -4,7 +4,7 @@
     {
       "customType": "regex",
       "description": ["Process custom dependencies"],
-      "fileMatch": ["(^|/)clusters/.+\\.ya?ml(?:\\.j2)?$"],
+      "fileMatch": [".ya?ml(?:\\.j2)?$"],
       "matchStrings": [
         "datasource=(?<datasource>\\S+) depName=(?<depName>\\S+)( repository=(?<registryUrl>\\S+))?\\n.+: (&\\S+\\s)?(?<currentValue>\\S+)",
         "datasource=(?<datasource>\\S+) depName=(?<depName>\\S+)\\n.+/(?<currentValue>(v|\\d)[^/]+)"
