--- a/.github/renovate/kinds/docker.json5
+++ b/.github/renovate/kinds/docker.json5
@@ -7,7 +7,9 @@
       "docker-compose\\.ya?ml$", // Matches docker-compose files
       "docker-compose\\.ya?ml\\.j2$", // Matches Jinja2 templated docker-compose files
       "\\.github/workflows/.*\\.ya?ml$", // Matches all workflow YAML files
-      "\\.github/workflows/.*\\.ya?ml\\.j2$" // Matches Jinja2 templated workflow files
+      "\\.github/workflows/.*\\.ya?ml\\.j2$", // Matches Jinja2 templated workflow files
+      "(^|/)clusters/.+\\.ya?ml(?:\\.j2)?$",
+      "(^|/)repositories/.+\\.ya?ml(?:\\.j2)?$"
     ],
     "enabled": true, // Enable Docker image updates
     "commitMessageSuffix": "fix: update Docker image", // Customize commit message suffix
