--- a/.github/renovate/kinds/flux.json5
+++ b/.github/renovate/kinds/flux.json5
@@ -3,7 +3,8 @@
 
   "flux": {
     "fileMatch": [
-      ".ya?ml(?:\\.j2)?$" // Matches all .yaml and .yml files, optionally with a .j2 extension
+      "(^|/)clusters/.+\\.ya?ml(?:\\.j2)?$",
+      "(^|/)repositories/.+\\.ya?ml(?:\\.j2)?$"
     ],
     "enabled": true, // Enable Flux updates
     "updateTypes": ["major", "minor", "patch"], // Allow updates for all version types
