--- a/.github/renovate/main.json5
+++ b/.github/renovate/main.json5
@@ -40,5 +40,13 @@
   ],
   "ignoreDeps": [
     // List any dependencies to ignore globally if needed
-  ]
+  ],
+  "ignorePaths": [
+    "**/*.sops.*",
+    "**/.archive/**",
+    "**/archive/**",
+    "**/misc/**",
+    "**/archive/**",
+    "**/resources/**"
+    ],
 }
