--- a/.github/renovate/kinds/docker.json5
+++ b/.github/renovate/kinds/docker.json5
@@ -9,7 +9,8 @@
       "\\.github/workflows/.*\\.ya?ml$", // Matches all workflow YAML files
       "\\.github/workflows/.*\\.ya?ml\\.j2$", // Matches Jinja2 templated workflow files
       "(^|/)clusters/.+\\.ya?ml(?:\\.j2)?$",
-      "(^|/)repositories/.+\\.ya?ml(?:\\.j2)?$"
+      "(^|/)repositories/.+\\.ya?ml(?:\\.j2)?$",
+      "(^|/)clustertool/embeded/.+\\.ya?ml(?:\\.j2)?$"
     ],
     "enabled": true, // Enable Docker image updates
     "commitMessageSuffix": "fix: update Docker image", // Customize commit message suffix
