--- a/.github/renovate/kinds/flux.json5
+++ b/.github/renovate/kinds/flux.json5
@@ -5,7 +5,7 @@
     "fileMatch": [
       "(^|/)clusters/.+\\.ya?ml(?:\\.j2)?$",
       "(^|/)repositories/.+\\.ya?ml(?:\\.j2)?$",
-      "(^|/)clustertool/embeded/.+\\.ya?ml(?:\\.j2)?$"
+      "(^|/)kubernetes/.+\\.ya?ml(?:\\.j2)?$"
     ],
     "enabled": true, // Enable Flux updates
     "updateTypes": ["major", "minor", "patch"], // Allow updates for all version types
