--- a/.github/renovate/kinds/helm-values.json5
+++ b/.github/renovate/kinds/helm-values.json5
@@ -4,6 +4,7 @@
   "helm-values": {
     "fileMatch": [
       "(^|/)clusters/.+\\.ya?ml(?:\\.j2)?$",
+      "(^|/)kubernetes/.+\\.ya?ml(?:\\.j2)?$",
       "(^|/)repositories/.+\\.ya?ml(?:\\.j2)?$",
       "(^|/)charts/.+\\.ya?ml(?:\\.j2)?$",
     ],
