--- a/.github/renovate/kinds/flux.json5
+++ b/.github/renovate/kinds/flux.json5
@@ -11,7 +11,7 @@
     "updateTypes": ["major", "minor", "patch"], // Allow updates for all version types
     "semanticCommitScope": "Flux Objects"
   },
-  
+  "branchPrefix": "flux-",
   "ignore": [
     // Add any global ignores here
   ],
