--- a/.github/renovate/kinds/githubactions.json5
+++ b/.github/renovate/kinds/githubactions.json5
@@ -13,6 +13,7 @@
       // Specify any actions or workflows to ignore
     ]
   },
+  "branchPrefix": "githubactions-",
   "ignoreDeps": [
     // List any dependencies to ignore globally if needed
   ],
