--- a/.github/renovate/kinds/go.json5
+++ b/.github/renovate/kinds/go.json5
@@ -13,6 +13,7 @@
     ],
     "semanticCommitScope": "go"
   },
+  "branchPrefix": "go-",
   "ignoreDeps": [
     // List any dependencies to ignore globally if needed
   ],
