--- a/.github/renovate/kinds/helm-values.json5
+++ b/.github/renovate/kinds/helm-values.json5
@@ -12,6 +12,7 @@
     "updateTypes": ["major", "minor", "patch", "digest"], // Allow updates for all version types
     "semanticCommitScope": "container"
   },
+  "branchPrefix": "helm-values-",
   "ignore": [
     // Add any global ignores here if needed
   ],
