--- a/.github/renovate/kinds/astro.json5
+++ b/.github/renovate/kinds/astro.json5
@@ -5,6 +5,7 @@
       "(^|/)website/.+/astro\\.config\\.(mjs|js|ts)$", // Matches Astro config files in /website and any subdirectory
       "(^|/)website/.+/package\\.json$" // Matches package.json files in /website and any subdirectory
     ],
+    "branchPrefix": "astro-",
     "enabled": true, // Enable updates for website dependencies
     "updateTypes": ["major", "minor", "patch"], // Allow updates for all version types
     "ignore": [
