--- a/.github/renovate/special/automerge.json5
+++ b/.github/renovate/special/automerge.json5
@@ -8,6 +8,16 @@
       "automergeType": "pr",
       "matchUpdateTypes": ["digest", "patch", "minor"],
       "matchPackagePatterns": ["ghcr.io/bjw-s", "ghcr.io/onedr0p", "tccr.io/tccr/.*", "tccr.io/tccrbase/.*" ],
+      "branchPrefix": "docker-automerge-"
+    },
+    {
+      "description": ["Auto-merge helm-values digests, patch and minor updates for trusted containers"],
+      "matchDatasources": ["helm-values"],
+      "automerge": true,
+      "automergeType": "pr",
+      "matchUpdateTypes": ["digest", "patch", "minor"],
+      "matchPackagePatterns": ["ghcr.io/bjw-s", "ghcr.io/onedr0p", "tccr.io/tccr/.*", "tccr.io/tccrbase/.*" ],
+      "branchPrefix": "helm-values-automerge-"
     },
 {
   "description": ["Auto-merge chart updates, patch, and minor updates for OCI Helm charts from tccr.io/truecharts"],
@@ -15,7 +25,8 @@
   "automerge": true,
   "automergeType": "pr",
   "matchUpdateTypes": ["digest", "patch", "minor"], // Specify the types of updates to automate
-  "matchPackagePatterns": ["tccr.io/truecharts/.*"] // Matches all OCI Helm charts under tccr.io/truecharts
+  "matchPackagePatterns": ["tccr.io/truecharts/.*"], // Matches all OCI Helm charts under tccr.io/truecharts
+  "branchPrefix": "helm-automerge-"
 },
     {
       "description": ["Auto-merge GitHub Actions for minor and patch"],
@@ -23,7 +34,8 @@
       "matchDatasources": ["github-tags"],
       "automerge": true,
       "automergeType": "pr",
-      "matchUpdateTypes": ["minor", "patch"]
+      "matchUpdateTypes": ["minor", "patch"],
+      "branchPrefix": "github-automerge-"
     }
   ]
 }
