some minor renovate tweaks for pin merging

--- a/.github/renovate/kinds/astro.json5
+++ b/.github/renovate/kinds/astro.json5
@@ -7,7 +7,7 @@
     ],
     "branchPrefix": "astro-",
     "enabled": true, // Enable updates for website dependencies
-    "updateTypes": ["major", "minor", "patch"], // Allow updates for all version types
+    "updateTypes": ["major", "minor", "patch", "digest", "pin", "lockfile"], // Allow updates for all version types
     "ignore": [
       // Specify any dependencies or versions to ignore
     ],
