--- a/.github/renovate/kinds/docker.json5
+++ b/.github/renovate/kinds/docker.json5
@@ -14,7 +14,7 @@
     ],
     "branchPrefix": "docker-",
     "enabled": true, // Enable Docker image updates
-    "updateTypes": ["major", "minor", "patch", "digest"], // Allow updates for all version types
+    "updateTypes": ["major", "minor", "patch", "digest", "pin"], // Allow updates for all version types
     "semanticCommitScope": "container",
     "ignore": [
       "talconfig.yaml" // Exclude any file named talconfig.yaml
