--- a/.github/renovate/special/automerge.json5
+++ b/.github/renovate/special/automerge.json5
@@ -25,7 +25,7 @@
   "automerge": true,
   "automergeType": "pr",
   "matchUpdateTypes": ["digest", "patch", "minor", "digest", "pin"], // Specify the types of updates to automate
-  "matchPackagePatterns": ["tccr.io/truecharts/.*"], // Matches all OCI Helm charts under tccr.io/truecharts
+  "matchPackagePatterns": ["tccr.io/truecharts/.*"],
   "branchPrefix": "helm-automerge-"
 },
     {
