--- a/.github/renovate/special/groups.json5
+++ b/.github/renovate/special/groups.json5
@@ -226,6 +226,18 @@
       "matchDatasources": ["docker"],
       "matchPackageNames": ["corentinth/it-tools"],
       "groupName": "it-tools"
-    }
+    },
+    {
+      matchPackagePatterns: ["^@docusaurus", "^docusaurus"],
+      groupName: "Docusaurus",
+    },
+    {
+      matchPackagePatterns: ["^@swc", "^swc"],
+      groupName: "SWC",
+    },
+    {
+      matchPackagePatterns: ["^@react", "^react"],
+      groupName: "React",
+    },
   ]
 }
