update helm-repo catalog naming

--- a/repositories/helm/authentik.yaml
+++ b/repositories/helm/authentik.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-    name: authentik
+    name: tc-authentik
     namespace: flux-system
 spec:
     interval: 15m
