--- a/repositories/helm/bitnami.yaml
+++ b/repositories/helm/bitnami.yaml
@@ -3,7 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: bitnami
+  name: tc-bitnami
   namespace: flux-system
 spec:
   type: oci
