--- a/repositories/helm/deliveryhero.yaml
+++ b/repositories/helm/deliveryhero.yaml
@@ -2,7 +2,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-    name: deliveryhero
+    name: tc-deliveryhero
     namespace: flux-system
 spec:
     interval: 30m
