--- a/repositories/helm/dysnix.yaml
+++ b/repositories/helm/dysnix.yaml
@@ -2,7 +2,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-    name: dysnix
+    name: tc-dysnix
     namespace: flux-system
 spec:
     interval: 1h
