--- a/repositories/helm/jaegertracing.yaml
+++ b/repositories/helm/jaegertracing.yaml
@@ -2,7 +2,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-    name: jaegertracing
+    name: tc-jaegertracing
     namespace: flux-system
 spec:
     interval: 30m
