--- a/repositories/helm/lwolf.yaml
+++ b/repositories/helm/lwolf.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-    name: lwolf
+    name: tc-lwolf
     namespace: flux-system
 spec:
     interval: 1h
