--- a/repositories/helm/metallb.yaml
+++ b/repositories/helm/metallb.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-    name: metallb
+    name: tc-metallb
     namespace: flux-system
 spec:
     interval: 10m
