--- a/repositories/helm/stakater.yaml
+++ b/repositories/helm/stakater.yaml
@@ -3,7 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: stakater
+  name: tc-stakater
   namespace: flux-system
 spec:
   type: oci
