--- a/repositories/helm/weave-gitops.yaml
+++ b/repositories/helm/weave-gitops.yaml
@@ -2,7 +2,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-    name: weave-gitops
+    name: tc-weave-gitops
     namespace: flux-system
 spec:
     type: oci
