--- a/repositories/helm/bjw-s.yaml
+++ b/repositories/helm/bjw-s.yaml
@@ -3,7 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: bjw-s
+  name: tc-bjw-s
   namespace: flux-system
 spec:
   type: oci
