--- a/repositories/helm/cloudnative-pg.yaml
+++ b/repositories/helm/cloudnative-pg.yaml
@@ -3,7 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: cloudnative-pg
+  name: tc-cloudnative-pg
   namespace: flux-system
 spec:
   interval: 2h
