--- a/repositories/helm/coredns.yaml
+++ b/repositories/helm/coredns.yaml
@@ -3,7 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: coredns
+  name: tc-coredns
   namespace: flux-system
 spec:
   interval: 2h
