--- a/repositories/helm/crowdsec.yaml
+++ b/repositories/helm/crowdsec.yaml
@@ -2,7 +2,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-    name: crowdsec
+    name: tc-crowdsec
     namespace: flux-system
 spec:
     interval: 1h
