--- a/repositories/helm/csi-driver-nfs.yaml
+++ b/repositories/helm/csi-driver-nfs.yaml
@@ -3,7 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: csi-driver-nfs
+  name: tc-csi-driver-nfs
   namespace: flux-system
 spec:
   interval: 2h
