--- a/repositories/helm/descheduler.yaml
+++ b/repositories/helm/descheduler.yaml
@@ -3,7 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: descheduler
+  name: tc-descheduler
   namespace: flux-system
 spec:
   interval: 2h
