--- a/repositories/helm/fairwinds.yaml
+++ b/repositories/helm/fairwinds.yaml
@@ -2,7 +2,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-    name: fairwinds
+    name: tc-fairwinds
     namespace: flux-system
 spec:
     interval: 30m
