--- a/repositories/helm/grafana.yaml
+++ b/repositories/helm/grafana.yaml
@@ -3,7 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: grafana
+  name: tc-grafana
   namespace: flux-system
 spec:
   interval: 2h
