--- a/repositories/helm/infracloudio.yaml
+++ b/repositories/helm/infracloudio.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-    name: infracloudio
+    name: tc-infracloudio
     namespace: flux-system
 spec:
     interval: 10m
