--- a/repositories/helm/ingress-nginx.yaml
+++ b/repositories/helm/ingress-nginx.yaml
@@ -3,7 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: ingress-nginx
+  name: tc-ingress-nginx
   namespace: flux-system
 spec:
   interval: 2h
