--- a/repositories/helm/jetstack.yaml
+++ b/repositories/helm/jetstack.yaml
@@ -3,7 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: jetstack
+  name: tc-jetstack
   namespace: flux-system
 spec:
   interval: 2h
