--- a/repositories/helm/kyverno.yaml
+++ b/repositories/helm/kyverno.yaml
@@ -3,7 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: kyverno
+  name: tc-kyverno
   namespace: flux-system
 spec:
   type: oci
