--- a/repositories/helm/metrics-server.yaml
+++ b/repositories/helm/metrics-server.yaml
@@ -3,7 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: metrics-server
+  name: tc-metrics-server
   namespace: flux-system
 spec:
   interval: 2h
