--- a/repositories/helm/node-feature-discovery.yaml
+++ b/repositories/helm/node-feature-discovery.yaml
@@ -3,7 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: node-feature-discovery
+  name: tc-node-feature-discovery
   namespace: flux-system
 spec:
   interval: 2h
