--- a/repositories/helm/postfinance.yaml
+++ b/repositories/helm/postfinance.yaml
@@ -3,7 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: postfinance
+  name: tc-postfinance
   namespace: flux-system
 spec:
   interval: 2h
