--- a/repositories/helm/prometheus-community.yaml
+++ b/repositories/helm/prometheus-community.yaml
@@ -3,7 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: prometheus-community
+  name: tc-prometheus-community
   namespace: flux-system
 spec:
   type: oci
