--- a/repositories/helm/runix.yaml
+++ b/repositories/helm/runix.yaml
@@ -2,7 +2,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-    name: runix
+    name: tc-runix
     namespace: flux-system
 spec:
     interval: 30m
