--- a/repositories/helm/stevehipwell.yaml
+++ b/repositories/helm/stevehipwell.yaml
@@ -3,7 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: stevehipwell
+  name: tc-stevehipwell
   namespace: flux-system
 spec:
   type: oci
