--- a/repositories/helm/truecharts.yaml
+++ b/repositories/helm/truecharts.yaml
@@ -2,7 +2,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-    name: truecharts
+    name: tc-truecharts
     namespace: flux-system
 spec:
     type: oci
